Bug 117809 - doesn't update type of icon of conditional formatting "Icon set" with percent if delete minimal or maximal values from range
Summary: doesn't update type of icon of conditional formatting "Icon set" with percent...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.0.3.2 release
Hardware: All All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Conditional-Formatting
  Show dependency treegraph
 
Reported: 2018-05-25 20:34 UTC by Roman Kuznetsov
Modified: 2018-07-15 22:11 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example (10.21 KB, application/octet-stream)
2018-05-28 20:17 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2018-05-25 20:34:32 UTC
Description:
doesn't update type of icon of conditional formatting "Icon set" with percent if delete minimal or maximal values from range

Version: 6.0.3.2
Build ID: 8f48d515416608e3a835360314dac7e47fd0b821
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: ru-RU (ru_RU.UTF-8); Calc: group

Steps to Reproduce:
0. Just open file Example from attach and go to 5, or

1. Create a conditional formatting for range A1:A20. All cells - Icon set - 3 arrows
2. Enter value for yellow arrow - 50 percent, for green arrow - 80 percent
3. Fill range A1:A20 uses any values from 0 to 100 (for simpling)
4. Note: percent for any value in cell of range is calculated as (cell_value-minimal_value) / (maximal_value-minimal_value)
5. Delete all value 0 or all value 100.
6. Type of icon for all cells in range must be recalculate and change! Because percent is changed! But it didn't happen!
7. Then, change value in any cell from range -> Type of icon for all cells in range is recalculated and changed to correct!

Actual Results:  
doesn't update type of icon of conditional formatting "Icon set" with percent if delete minimal or maximal values from range

Expected Results:
type of icon changes to correct if delete minimal or maximal values from range


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:60.0) Gecko/20100101 Firefox/60.0
Comment 1 Roman Kuznetsov 2018-05-28 20:17:11 UTC
Created attachment 142358 [details]
Example
Comment 2 Buovjaga 2018-06-20 17:22:17 UTC
(In reply to kompilainenn from comment #0)
> 5. Delete all value 0 or all value 100.
> 6. Type of icon for all cells in range must be recalculate and change!
> Because percent is changed! But it didn't happen!
> 7. Then, change value in any cell from range -> Type of icon for all cells
> in range is recalculated and changed to correct!

After I delete 0s, the arrows go away and do not come back.

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: 0929a98acca8ec4d86caa97d3090a39f89f35f90
CPU threads: 8; OS: Linux 4.17; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on June 20th 2018
Comment 3 Commit Notification 2018-07-13 23:58:31 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=17722541e906cf64dcdd7169194aad72ec14bb10

tdf#117809, listen to the actual conditional format range if necessary

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-07-13 23:59:52 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4b7ce45c2384fdd65c17ab18036899cd76577254

add tests for tdf#117809

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.