tdf#117809, listen to the actual conditional format range if necessary

Change-Id: Ib83cf22e40f5e0338a3c85f631d30f00b80d8655